package solidexercicio10.model;

/** Capacidade independente de deslocamento no mapa. */
public interface Movel {
    void mover(int dx, int dy);
}
