@startuml
skinparam classAttributeIconSize 0
hide empty members
interface Posicionavel { +getX(): int; +getY(): int }
interface Movel { +mover(dx: int, dy: int): void }
abstract class EntidadeMapa { #x: int; #y: int; +getX(): int; +getY(): int; +getSimbolo(): char }
abstract class Passageiro { -nome: String; -tipo: String; +getNome(): String; +getTipo(): String; +getPontuacao(): int }
class Professor
class Engenheiro
class Astronauta
class Nave { -nome: String; -capacidade: int; -vidas: int; +embarcar(passageiro): boolean; +perderVida(): void; +moverComLimites(comando, min, max): boolean }
class Asteroide
class Inimigo
class Missao { -nave: Nave; -passageiros: List<Passageiro>; -asteroides: List<Asteroide>; -inimigos: List<Inimigo>; +embarcarPassageiroNaPosicao(): boolean; +verificaColisao(): boolean; +moverInimigos(random, min, max): void; +todosEmbarcados(): boolean }
enum Dificuldade { FACIL; MEDIO; DIFICIL }
EntidadeMapa ..|> Posicionavel
EntidadeMapa <|-- Passageiro
Passageiro <|-- Professor
Passageiro <|-- Engenheiro
Passageiro <|-- Astronauta
EntidadeMapa <|-- Nave
EntidadeMapa <|-- Asteroide
EntidadeMapa <|-- Inimigo
Nave ..|> Movel
Inimigo ..|> Movel
Missao *-- "1" Nave
Missao *-- "0..*" Passageiro
Missao *-- "0..*" Asteroide
Missao *-- "0..*" Inimigo
Nave o-- "0..*" Passageiro : embarcados
note right of Dificuldade : Cada valor define pontos iniciais, passageiros, asteroides e inimigos.
@enduml
